Añadida funcionalidad de crear actividad de usuario Añadida vista de formulario Añadida clase Actividad Corregido un error en la obtención del id de usuario al hacer el login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".MenuActivity" />
         <activity android:name=".ReglasActivity" />
         <activity android:name=".EstrategiaActivity" />
-        <activity android:name=".LexicoActivity"></activity>
+        <activity android:name=".LexicoActivity" />
     </application>
 
 </manifest>
