Añadida funcionalidad de Test Creada la actividad Test (Clase y Layout) Creado el recurso test.xml, donde estan las preguntas y respuestas.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ReglasActivity" />
         <activity android:name=".EstrategiaActivity" />
         <activity android:name=".LexicoActivity" />
+        <activity android:name=".TestActivity"></activity>
     </application>
 
 </manifest>
