--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".SportsActivity" />
-        <activity android:name=".MenuActivity" />
-        <activity android:name=".ReglasActivity" />
-        <activity android:name=".EstrategiaActivity" />
-        <activity android:name=".LexicoActivity" />
-        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".SportsActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".MenuActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ReglasActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".EstrategiaActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".LexicoActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".TestActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
